syntax = "proto3";

package proto;

import "proto/google/api/annotations.proto";
import "proto/google/api/httpBody.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
//import "proto/product_service.proto";


option go_package = "./";
//option java_package = "./proto";

service OrderService{
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/place"
      body:"*"
    };
  };
  rpc CancelOrder(GetIDRequest) returns (CancelOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/cancel/{id}"
    };
  };
  rpc GetOrder(GetIDRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/get/{id}"
    };
  };
  rpc GetAllUserOrders(GetIDRequest) returns (GetAllUserOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders/get-user-orders/{id}"
    };
  };
}

message GetIDRequest{
  string id =1;
}

message GetAllUserOrdersResponse {
  string status=1;
  repeated Order orders=2;
}

message Order {
  string id =1;
  string product_id=2;
  string user_id=3;
  string total_cost=4;
  string username=5;
  string product_name=6;
  string description=7;
  string price=8;
  string shipping_address=9;
  google.protobuf.Timestamp created_at=10;
}

message PlaceOrderRequest {
  string product_id=1;
  string access_token=2;
}

message GetOrderResponse {
  string status=1;
  string msg=2;
  Order order=3;
}

message PlaceOrderResponse {
  string status=1;
  Order order=2;
}

message CancelOrderResponse {
  string status=1;
  string msg=2;
}

///////////////////////////////////////////////////////////////////////////
service ProductService{
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  };
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {
    option (google.api.http) = {
      post: "/v1/products/add"
      body: "*"
    };
  };
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/products/{id}"
    };
  };
}

message GetAllProductsRequest{}

message GetProductRequest{
  string id=1;
}

message  GetAllProductsResponse {
  string status=1;
  repeated AddProductResponse products=2;
}

message AddProductRequest {
  string product_name=1;
  string description=2;
  string price=3;
}

message AddProductResponse {
  string id=1;
  string product_name=2;
  string description=3;
  string price=4;
}

message GetProductResponse {
  string id=1;
  string product_name=2;
  string description=3;
  string price=4;
}

service LoginService{
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  };
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {
    option (google.api.http) = {
      post: "/v1/get-user"
      body: "*"
    };
  }
  rpc ServiceHealth(google.protobuf.Empty) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/health"
    };
  }
}

message LoginUserRequest{
  string email=1;
  string password=2;
}

message LoginUserResponse{
  User user=1;
  string session_id=2;
  string access_token=3;
  string msg=4;
}

message RegisterUserRequest {
  string name=1;
  string email=2;
  string password=3;
  string address=4;
}

message RegisterUserResponse {
  User user=1;
  string msg=2;
}

message GetUserDetailsRequest{
  string access_token=1;
}

message GetUserDetailsResponse{
  User user_data=1;
  string msg=2;
}

message User {
  string id=1;
  string fullname=3;
  string email=4;
  string password=5;
  string address=6;
  google.protobuf.Timestamp created_at=7;
}
